# audio-xai-fragility

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  justfile  project.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  zizmor.yml
CHANGELOG/: 0.0.1.md  0.0.2.md
audio_xai_fragility/: __init__.py  dataset.py  features.py  plots.py
audio_xai_fragility/metrics/: peaq.py
audio_xai_fragility/modeling/: predict.py  train.py
docs/: installation.md
scripts/: release.py
src/audio_xai_fragility/: __main__.py  cli.py  h.py
tests/: test_audio_xai_fragility.py
