[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Audio-XAI-Fragility"
version = "0.0.4"
description = "A project about Audio models and it's fragility"
readme = "README.md"
authors = [
  {name = "Piotr Kitłowski", email = "piotr.kitlowski@gmail.com"}
]
maintainers = [
  {name = "Piotr Kitłowski", email = "piotr.kitlowski@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "rich",
  "tensorboard>=2.20.0",
  "torch>=2.11.0",
  "torchvision>=0.26.0",
  "pre-commit>=4.5.1",
]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/cncPomper/Audio-XAI-Fragility/issues"
changelog = "https://github.com/cncPomper/Audio-XAI-Fragility/releases"
documentation = "https://cncPomper.github.io/Audio-XAI-Fragility/"
homepage = "https://github.com/cncPomper/Audio-XAI-Fragility"

[project.scripts]
audio_xai_fragility = "audio_xai_fragility.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.bumpversion]
current_version = "0.0.4"
commit = true
tag = true
allow_shell_hooks = true
pre_commit_hooks = ["ruff check .", "uv run --python=3.12 pytest -q"]
post_commit_hooks = ["git push", "git push --tags"]
